<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/bg"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/your_gps_seems_to_be_disabled"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/search_view_shape"
                android:backgroundTint="@color/navy"
                android:elevation="@dimen/_5sdp"
                android:maxLines="1"
                android:text="@string/enable"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                app:layout_constraintTop_toBottomOf="@+id/title_dialog"
                tools:targetApi="lollipop" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/search_view_shape"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/_5sdp"
                android:maxLines="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/navy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_dialog"
                tools:targetApi="lollipop" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>
