<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".activities.SpeedMeterActivity">

    <View
        android:id="@+id/whiteView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="@dimen/_9sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageviewspeedometer"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:saveEnabled="true"
        android:src="@drawable/arrowhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speedometer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageviewspeedometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageviewspeedometer" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_weather"
        app:layout_constraintBottom_toTopOf="@+id/bannerID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/speedometer_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.github.anastr.speedviewlib.SpeedView
                    android:id="@+id/speedometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sv_textColor="@color/white"
                    app:sv_maxSpeed="250"
                    app:sv_minSpeed="0"
                    app:sv_pointerColor="@color/white"
                    app:sv_speedTextColor="@color/white"
                    app:sv_speedometerColor="@color/white"
                    app:sv_unitTextColor="@color/white"
                    app:sv_unitUnderSpeedText="true"
                    app:sv_withPointer="true"
                    app:sv_withTremble="false" />

                <DigitalClock
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/speedometer" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginBottom="30sp"
                app:layout_constraintTop_toBottomOf="@+id/speedometer_cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Time"
                            android:textSize="16sp"
                            android:layout_marginTop="10sp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:gravity="center"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/timeTreavel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17ssp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/elapsed"
                            android:textSize="16sp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_marginBottom="10sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Distance"
                            android:textSize="16sp"
                            android:layout_marginTop="10sp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:gravity="center"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/totalDistance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17ssp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Kilometer"
                            android:textSize="16sp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_marginBottom="10sp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
                android:id="@+id/letsGoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constTime"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/startBtn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@drawable/letsgo_shape"
                        android:paddingBottom="0dp"
                        android:text="@string/lets_go"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="25sp"
                        android:layout_height="3sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pauseBtn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/pause"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@drawable/letsgo_shape"
                        android:text="@string/pause"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        tools:targetApi="lollipop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="25sp"
                        android:layout_height="3sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/stopBtn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:visibility="gone">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/stop"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/letsgo_shape"
                        android:text="@string/stop"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        tools:targetApi="lollipop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="25sp"
                        android:layout_height="3sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/bannerID" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bannerID"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <include
            android:id="@+id/bannerAdPlace"
            layout="@layout/street_view_my_bannar_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>